<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button"
            android:layout_below="@+id/toolbar"
            android:layout_marginBottom="20dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/drink_photo"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:contentDescription="@string/drink_photo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/drink_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/drink_descricao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textSize="14sp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/lb_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/label_unitary_value"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/drink_preco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_toEndOf="@id/lb_value"
                            android:textColor="@android:color/black"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/darker_gray" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/remove_dose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/ic_find_next_material"
                            android:clickable="true"
                            android:contentDescription="@string/drink_photo"
                            android:elevation="0dp" />

                        <TextView
                            android:id="@+id/drink_quantities"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:layout_toEndOf="@+id/remove_dose"
                            android:maxLength="2"
                            android:textAlignment="center" />

                        <ImageButton
                            android:id="@+id/add_dose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/drink_quantities"
                            android:background="@drawable/ic_find_previous_material"
                            android:clickable="true"
                            android:contentDescription="@string/drink_photo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/drink_preco_total"
                            android:text="@string/label_total"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/drink_preco_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_margin="5dp"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_brown_add_cart"
            android:text="@string/action_add_to_cart"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>